--- a/Sports/Views/Home/Index.cshtml
+++ b/Sports/Views/Home/Index.cshtml
@@ -1,2 +1,5 @@
 ﻿<h1>Home</h1>
-
+<footer>
+    <a asp-controller="basketball" asp-action="index">Basketball section</a>
+    <a asp-controller="football" asp-action="index">Football section</a>
+</footer>
